# batch-rename

./: .gitignore  INSTRUCTIONS.md  LICENSE  Makefile  README.md  app_entry.py  build_app.py  entitlements.plist  icon.icns  pyproject.toml
demos/: setlist_example.txt
demos/04 Advanced- Shortcodes/: shortcodes demo rename list.txt
demos/Untitled.fcpbundle/: .lock-info  CurrentVersion.flexolibrary  CurrentVersion.plist  Settings.plist
demos/Untitled.fcpbundle/4-22-26/: CurrentVersion.fcpevent
previous_version/: README.md
previous_version/Adam Borecki's Batch Rename Droplet/Adam Borecki's Batch Rename Droplet.app/: AdamBoreckiBatchRename.php
previous_version/Adam Borecki's Batch Rename Droplet/Adam Borecki's Batch Rename Droplet.app/Contents/: Info.plist  document.wflow
previous_version/Adam Borecki's Batch Rename Droplet/Demos 2/01 Simple Demo/: Click+Drag me to the droplet app.txt
previous_version/Adam Borecki's Batch Rename Droplet/Demos 2/03 Broadcast Concert/: ACA week 2 batch rename.txt
previous_version/Adam Borecki's Batch Rename Droplet/Demos 2/04 Advanced- Shortcodes/: shortcodes demo rename list.txt
previous_version/Adam Borecki's Batch Rename Droplet/Demos/05 Advanced- More Folders/: ACA week 2 names.txt
src/: bridge.py  cli.py  fcpxml.py  rename.py  setlist.py
src/batch_rename/: app.py  bridge.py  cli.py  rename.py  setlist.py
src/batch_rename/ui/: index.html
src/ui/: index.html
