[project]
name = "batch-rename"
version = "0.1.0"
description = "Batch export and rename Final Cut Pro performance clips for Chapman University"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pywebview>=6.2.1",
]

[project.scripts]
batch-rename = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
